--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -1,8 +1,8 @@
 main {
   width: 100%;
   margin: 0;
-  background-color: rgba($color: #e5e5e5, $alpha: 0.5);
   position: relative;
+  background-color: rgba($color: #e5e5e5, $alpha: 0.5);
 }
 
 .dashboard {
@@ -10,6 +10,11 @@ main {
   position: relative;
   right: -20%;
   width: 80%;
+
+  @media (max-width: 460px) {
+    right: 0;
+    width: 100%;
+  }
 }
 
 .dashboard__body {
@@ -17,6 +22,10 @@ main {
   margin-top: 100px;
   height: 100%;
   padding: 40px 60px;
+
+  @media (max-width: 460px) {
+    padding: 40px 20px;
+  }
 
   h2 {
     font-weight: 500;
@@ -29,6 +38,10 @@ main {
 .dashboard__cards {
   display: flex;
   gap: 26px;
+
+  @media (max-width: 460px) {
+    flex-wrap: wrap;
+  }
 }
 
 .dashboard__card {
@@ -61,5 +74,18 @@ main {
     line-height: 28px;
     text-transform: uppercase;
     color: #213f7d;
+  }
+
+  @media (max-width: 460px) {
+    width: 100%;
+
+    .icon {
+      width: 50px;
+      height: 50px;
+    }
+
+    h3 {
+      font-size: 18px;
+    }
   }
 }
