--- a/src/components/side-nav/side-nav.scss
+++ b/src/components/side-nav/side-nav.scss
@@ -59,7 +59,6 @@
 }
 
 .side-nav-mobile {
-  // display: none;
   width: 80%;
   z-index: 20;
 }
@@ -71,8 +70,12 @@
   top: 100px;
   padding: 0 0 20px;
   font-size: larger;
-  display: block;
+  // display: block;
   color: #213f7d;
   background-color: #fff;
   text-align: center;
+  display: none;
+  @media (max-width: 460px) {
+    display: block;
+  }
 }
