:gem: style: fix responsive issues

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,7 +1,7 @@
 .login__container {
   width: 80%;
   margin: auto;
-  height: 100%;
+  min-height: 100%;
   overflow: hidden;
   margin-top: 5rem;
 }
